[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "cout text"
authors = ["Lucas Bagge"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
